# numerology-full-stack

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-win-setup.yml
backend/: pyproject.toml
numerology/: pyproject.toml
numerology/src/numerology/const/: __init__.py  calendar.py  di_zhi.py  gua.py  na_yin.py  relationship.py  shi_shen.py  wu_xing.py
numerology/src/numerology/core/: chart.py  ganzhi_calendar.py  generator.py  jiazi.py  relationship.py
numerology/src/numerology/logging/: __init__.py
numerology/src/numerology/models/: chart.py  main_destiny.py  na_yin.py  pillar.py  solar_term.py
numerology/src/numerology/models/base/: __init__.py  di_zhi.py  tian_gan.py
numerology/src/numerology/utils/: datetimes.py  validator.py
numerology_api/: .env.example  pyproject.toml
numerology_api/src/numerology_api/: logging_setup.py  main.py
numerology_api/src/numerology_api/archives/: __init__.py  models.py  service.py
numerology_api/src/numerology_api/auth/: __init__.py  config.py  dependencies.py  jwt_utils.py  models.py  service.py  wechat.py
numerology_api/src/numerology_api/db/: __init__.py  config.py  engine.py
numerology_api/src/numerology_api/fortune/: __init__.py  config.py  daily_prompts.py  deepseek.py  prompts.py
numerology_api/src/numerology_api/models/: __init__.py  archive.py  auth.py  bazi.py  fortune.py  gua.py  health.py
numerology_api/src/numerology_api/routers/: __init__.py  archives.py  auth.py  bazi.py  fortune.py  gua.py
numerology_cli/: pyproject.toml  requirements.txt
numerology_cli/src/numerology_cli/commands/: ba_zi.py  base.py  core.py  gua.py
numerology_cli/src/numerology_cli/entrypoint/: __init__.py
numerology_web/: .npmrc  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
numerology_web/src/: App.vue  main.ts
numerology_web/src/api/: archive.ts  auth.ts  bazi.ts  client.ts  fortune.ts  gua.ts  types.ts
numerology_web/src/components/: BaZiChart.vue  ConfirmDialog.vue  DateTimePicker.vue  FormField.vue  MainDestinyList.vue  PillarCard.vue  QianTongLoader.vue  RadarChart.vue  ScrollPanel.vue  ShichenPicker.vue  SiteHeader.vue  TrigramEditor.vue  TrigramResult.vue  YaoLine.vue
numerology_web/src/router/: index.ts
numerology_web/src/stores/: archive.ts  auth.ts  bazi.ts  fortune.ts  gua.ts  theme.ts
numerology_web/src/styles/: main.css
numerology_web/src/utils/: exportImage.ts  shichen.ts
numerology_web/src/views/: BaZiView.vue  FortuneView.vue  GuaView.vue  IndexView.vue  LoginView.vue  PersonalView.vue
scripts/windows/: numerology-cli-setup.bat
src/numerology/commands/: __init__.py  ba_zi.py  base.py  gua.py
src/numerology/const/: __init__.py  datetime_format.py  di_zhi.py  gender.py  gua.py  na_yin.py  shi_shen.py  tian_gan.py  wu_xing.py
src/numerology/core/: dayun.py  dizhi.py  ganzhi_calendar.py  generator.py  relationship.py  shishen.py  solar_term.py  tiangan.py
src/numerology/core/base/: __init__.py  dizhi.py  tiangan.py  wuxing.py
src/numerology/entrypoint/: __init__.py
src/numerology/models/: __init__.py  ba_zi.py  base.py  cang_gan.py  di_zhi.py  jia_zi.py  ming_pan.py  pillar.py  result.py  solar_term.py  tian_gan.py  wu_xing.py
src/numerology/models/base/: __init__.py
src/numerology/utils/: datetimes.py  validator.py
