[project]
name = "numerology-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.17"
dependencies = [
    "fastapi[all]>=0.116.1",
    "jwt>=1.4.0",
    "odmantic>=1.0.2",
    "redis>=6.4.0",
    "sqlmodel>=0.0.24",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple"
default = true
